<resources>
    <string name="app_name">صندوق</string>
    <string name="action_settings">Settings</string>

    <string-array name="drawer_items_array">
        <item>خانه</item>
        <item>مشخصات من</item>
        <item>راهنما</item>
        <item>خروج</item>
    </string-array>

    <string-array name="period_Array">
        <item>شش ماه</item>
        <item>سه ماه</item>
        <item>یک ماه</item>
        <item>یک هفته</item>
    </string-array>

    <string name="title_activity_login">ورود</string>
    <string name="title_activity_sign_up">ثبت نام</string>

    <string name="password_hint">رمز عبور</string>
    <string name="email_hint">آدرس ایمیل</string>
    <string name="sign_up_button_label">ثبت نام</string>
    <string name="signup_error_message">لطفا آدرس ایمیل و رمز عبور خود را وارد کنید</string>
    <string name="signup_error_title">خطا!</string>
    <string name="login_error_message">لطفا آدرس ایمیل و رمز عبور خود را وارد کنید</string>
    <string name="login_error_title">خطا!</string>
    <string name="login_button_label">ورود</string>
    <string name="sign_in_text">ورود</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="sanType_des">برای ایجاد صندوق جدید نوع صندوق خود را انتخاب کنید.</string>
    <string name="sanType_A">صندوق قرض الحسنه</string>
    <string name="sanType_B">صندوق قرعه کشی دوره ای</string>
    <string name="sanAntDes">مشخصات صندوق خود را وارد کنید:</string>
    <string name="san_name">نام صندوق</string>
    <string name="san_AccNum">شماره حساب</string>
    <string name="san_CardNum">شماره کارت</string>
    <string name="san_Period">مدت دوره</string>
    <string name="san_des_confirm">تایید مشخصات</string>
    <string name="san_invite_confirm">تایید اعضا</string>

    <string name="type_tab_title">نوع صندوق</string>
    <string name="info_tab_title">مشخصات</string>
    <string name="members_tab_title">اعضا</string>
    <string name="confirm_tab_title">تایید</string>
    <string name="title_activity_create_sandoogh">CreateSandooghActivity</string>
    <string name="san_invite">برای اضافه کردن افراد به صندوق خود، نام کاربری آنها را وارد کنید:</string>
    <string name="san_confirm_des">ایجاد صندوق با موفقیت به اتمام رسید. تبریک!</string>
    <string name="san_confirm">تایید</string>
    <string name="san_account_edit">ویرایش اطلاعات </string>
    <string name="san_account_amount">مبلغ وام هایی که دست افراد است</string>
    <string name="member_num">تعداد اعضا</string>
    <string name="san_amount">مبلغ پرداختی</string>
    <string name="san_total">موجودی صندوق</string>
    <string name="start_date">تاریخ ایجاد</string>
    <string name="loan_request">درخواست وام</string>
    <string name="period_payment">پرداخت پول دوره ای</string>
    <string name="back_payment">پرداخت قسط</string>
    <string name="report">گزارش</string>
    <string name="send">ارسال</string>
    <string name="loan_amount">مبلغ وام درخواستی</string>
    <string name="payment">شماره رسید پرداخت را وارد کنید</string>
    <string name="username">نام کاربری</string>
    <string name="SelecIimage">انتخاب تصویر</string>
    <string name="RemoveImage">حذف تصویر</string>
    <string name="action_drawer_title">منو</string>
    <string name="user_name">نام</string>
    <string name="loan_count">تعداد اقساط</string>

    <string name="sandoogh_account_description">مشخصات صندوق</string>
    <string name="sandoogh_account_payments">پرداخت ها</string>
    <string name="sandoogh_account_loan">وام</string>
    <string name="sandoogh_account_payment_report">مشاهده ی گزارش پرداخت ها</string>
    <string name="sandoogh_account_view_members_list">مشاهده اعضای صندوق</string>
    <string name="sandoogh_admin_panel">مدیریت صندوق</string>
    <string name="sandoogh_admin">مدیر صندوق</string>

    <string name="period_payment_dialog_text_view">شناسه ی پرداخت سهم این دوره را وارد نمایید</string>
    <string name="period_payment_dialog_edit_text_hint">شناسه ی پرداخت</string>
    <string name="period_payment_dialog_ok">تایید</string>
    <string name="period_payment_dialog_cancel">لغو</string>

    <string name="payment_report_close_dialog">بستن</string>

    <string name="all_paid">شما سهم خود را در همه ی دوره ها پرداخت کرده اید</string>

    <string name="amount">مبلغ</string>
    <string name="amount_unit">تومان</string>
    <string name="date">تاریخ</string>
    <string name="payment_id">شناسه پرداخت</string>
    <string name="payment_report_dialog_approved">تایید شده</string>
    <string name="payment_report_dialog_not_approved">تایید نشده</string>
    <string name="Error">خطا در اتصال</string>
    <string name="inviteAccepted">با موفقیت به صندوق اضافه شدید</string>

    <string name="save_changes">ذخیره ی تغییرات</string>
    <string name="cancel_changes">لغو تغییرات</string>
    <string name="edit_members">ویرایش اعضا</string>
    <string name="confirm_payments">تایید پرداخت ها</string>
    <string name="view_payments">گزارش پرداخت ها</string>
    <string name="view_loan_requests">بررسی درخواست های وام</string>
    <string name="view_loans">گزارش وام ها</string>
    <string name="confirm_loan_payments">تایید پرداخت اقساط وام</string>

    <string name="save_loan_request">ثبت درخواست</string>
    <string name="cancel_loan_request">لغو</string>
    <string name="loan_request_dialog_empty_fields_error">لطفا اطلاعات درخواست وام را به طور کامل وارد کنید</string>

    <string name="confirm">تایید</string>

    <string name="loan_check">در حال بررسی</string>
    <string name="loan_confirm">تایید</string>
    <string name="loan_reject">رد</string>
    <string name="save_loan_payment_id">ثبت شناسه ی پرداخت</string>

    <string name="typeError">نوع صندوق را انتخاب کنید</string>
    <string name="nameError">نام صندوق را وارد کنید</string>
    <string name="success">صندوق با موفقیت ایجاد شد</string>
    <string name="sandoogh">صندوق</string>
    <string name="account">مشخصات من</string>
    <string name="help">راهنما</string>
    <string name="inviteNotif">شما را دعوت کرد</string>
    <string name="paymentNotif">رسید دریافت شد</string>
    <string name="notifications">اعلانات</string>
    <string name="help_app_description">درباره برنامه</string>
    <string name="help_app_description_text">هدف اصلی این اپلیکیشن، مدیریت صندوق های مالی خانوادگی است. این صندوق ها به منظور پس انداز مالی و کمک به افراد در خانواده ها ایجاد می شوند. مکانیزم اصلی این صندوق ها به شرح زیر است:  \n
یک حساب بانکی به نام صندوق ایجاد می شود و یکی از افراد خانواده به عنوان مسئول صندوق انتخاب می شود. همه ی افراد عضو صندوق باید به صورت دوره ای مثلا ماهیانه یا هفتگی مبلغی را که بر سر آن توافق شده است، به حساب صندوق واریز کنند. همچنین به صورت دوره ای به افراد وام تعلق می گیرد. \n
این اپلیکیشن می تواند به جای حساب های دفتری، در این گونه فعالیت ها مورد استفاده قرار بگیرد. \n
</string>


    <string name="help_start_the_app">شروع به کار</string>
    <string name="help_start_the_app_text">هر کاربر با ورود به برنامه باید با وارد کردن ایمیل و کلمه عبور ثبت نام کند و حساب کاربری خود را ایجاد کند. . پس از ثبت نام و ورود به سامانه،امکان ایجاد یک صندوق جدید و مشاهده ی صندوق های من وجود دارد. در صفحه ی شخصی هر فرد، امکان مشاهده و ویرایش اطلاعات شخصی وجود دارد.   \n
در پنل هر صندوق، امکاناتی مانند مشاهده ی موجودی صندوق، مشاهده ی مبلغی از صندوق که به عنوان وام در دست اعضای صندوق است، تاریخچه ی واریزهای شخص به صندوق، مبلغی که شخص به صندوق بدهکار است، تاریخچه ی وام ها، درخواست وام برای موعد بعدی و... وجود دارد.  \n
</string>
    <string name="help_differenet_types">انواع صندوق و وام</string>
    <string name="help_differenet_types_text">وام ها براساس نوع صندوق به دو صورت می باشند:  \n
- در حالت اول افراد برای موعد بعدی تقاضای وام می کنند و اگر بیش از یک نفر تقاضای وام کرده باشد، قرعه کشی انجام می شود.  این نوع صندوق "صندوق قرض الحسنه" نام دارد.  \n
- در حالت دوم در آغاز هر دوره قرعه کشی صورت می گیرد و به یکی از افراد به قید قرعه مبلغ جمع آوری شده در دوره تعلق میگیرد. در این نوع صندوق همه افراد در هر دوره به یک اندازه سهم به صندوق واریز می کنند.این نوع صندوق "صندوق قرعه کشی دوره ای" نام دارد.  \n
</string>
    <string name="help_user_and_admin">عضویت و مدیریت صندوق</string>
    <string name="help_user_and_admin_text">برای ایجاد صندوق علامت به اضافه در گوشه سمت راست پایین صفحه اول را انتخاب و با انتخاب نوع صندوق و مشخصات لازم و اضافه کردن اعضا ایجاد صندوق را تایید میکنیم. در این صورت یک صندوق با مدیریت این کاربر ایجاد شده است. کاربر میتواند با اضافه کردن اعضا، کاربران دیگر را به عضویت این صندوق در بیاورد.  \n
لیست صندوق های کاربر در صفحه نخست نمایش داده می شود.با انتخاب هریک مشخصات آن صندوق، پرداخت های قبلی و وام ها نمایش داده می شوند. همچنین مشاهده اعضای صندوق در این بخش امکان پذیر است.  \n
صندوق هایی که مدیریت آن ها بر عهده کاربر است با علامت ستاره در کنار آن ها نمایش داده می شوند و با انتخاب این صندوق ها کاربر میتواند وارد بخش مدیریت شود. در این بخش می توان مشخصات صندوق را تغییر داد، اعضا را کم و زیاد کرد، پرداخت ها و وام ها را تایید کرد و گزارش پرداخت ها و وام ها را دریافت کرد.  \n
</string>


</resources>
