<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--<android.support.design.widget.AppBarLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:theme="@style/AppTheme.AppBarOverlay">-->

        <!--<android.support.v7.widget.Toolbar-->
            <!--android:id="@+id/toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="?attr/actionBarSize"-->
            <!--android:background="@color/colorPrimary"-->
            <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->

    <!--</android.support.design.widget.AppBarLayout>-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_weight="0.3"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom|right">

            <ImageView
                android:id="@+id/popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_add_circle_black_24dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/san_AccNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/san_AccNum"
            android:gravity="center"/>
        <TextView
            android:id="@+id/san_CardNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/san_CardNum"
            android:gravity="center"/>
        <TextView
            android:id="@+id/member_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/member_num"
            android:gravity="center"/>
        <TextView
            android:id="@+id/san_Period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/san_Period"
            android:gravity="center"/>
        <TextView
            android:id="@+id/san_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/san_amount"
            android:gravity="center"/>
        <TextView
            android:id="@+id/san_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/san_total"
            android:gravity="center"/>
        <TextView
            android:id="@+id/start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/moneyReq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moneyReq"/>
        <Button
            android:id="@+id/period_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/period_payment"/>
        <Button
            android:id="@+id/back_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_payment"/>
        <Button
            android:id="@+id/report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report"/>
    </LinearLayout>
</LinearLayout>