<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1">-->
    <!--<include-->
    <!--android:id="@+id/tool_bar"-->
    <!--layout="@layout/toolbar" />-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_weight="0.7"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sanAntDes"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/san_name" />

        <EditText
            android:id="@+id/account_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/san_AccNum"
            android:inputType="number" />

        <EditText
            android:id="@+id/card_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/san_CardNum"
            android:inputType="number" />
        <EditText
            android:id="@+id/san_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/san_amount"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Spinner
                android:id="@+id/period_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/period_Array" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/san_Period" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:orientation="vertical">

        <Button
            android:id="@+id/sandoogh_description_confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/san_des_confirm" />

    </LinearLayout>
</LinearLayout>


