<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/san_AccNum_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false" />

            <TextView
                android:id="@+id/san_AccNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/san_AccNum" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/san_CardNum_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false" />

            <TextView
                android:id="@+id/san_CardNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/san_CardNum" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/member_num_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false" />

            <TextView
                android:id="@+id/member_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_num" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/san_Period_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false" />

            <TextView
                android:id="@+id/san_Period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/san_Period" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/san_amount_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false" />

            <TextView
                android:id="@+id/san_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/san_amount" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/san_total_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false" />

            <TextView
                android:id="@+id/san_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/san_total" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/start_date_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false" />

            <TextView
                android:id="@+id/start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/moneyReq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moneyReq" />

        <Button
            android:id="@+id/period_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/period_payment" />

        <Button
            android:id="@+id/back_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_payment" />

        <Button
            android:id="@+id/report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report" />
    </LinearLayout>
</LinearLayout>