<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".pages.signUpAndLogin.SignUpActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textDirection="rtl">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/emailField"
            android:layout_below="@+id/emailField"
            android:ems="10"
            android:gravity="right"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textDirection="rtl" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/passwordField"
            android:layout_below="@+id/passwordField"
            android:text="@string/sign_up_button_label" />

        <TextView
            android:id="@+id/signInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signupButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="69dp"
            android:text="@string/sign_in_text" />

    </RelativeLayout>
</LinearLayout>