<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/standard_layout_margin"
    android:background="@drawable/rounded_corner_shape_background_color"
    android:orientation="vertical"
    android:padding="@dimen/standard_layout_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/amount_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_layout_margin"
                android:layout_marginRight="@dimen/standard_layout_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/username_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_layout_margin"
                android:layout_marginRight="@dimen/standard_layout_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name" />
        </LinearLayout>


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/standard_layout_margin"
        android:layout_marginTop="@dimen/standard_layout_margin"
        android:background="@color/colorDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/loan_count_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_layout_margin"
                android:layout_marginRight="@dimen/standard_layout_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loan_count" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/loan_period_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_layout_margin"
                android:layout_marginRight="@dimen/standard_layout_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/san_Period" />
        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/standard_layout_margin"
        android:layout_marginTop="@dimen/standard_layout_margin"
        android:background="@color/colorDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/loan_request_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/loan_request_check"
            android:gravity="right"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/loan_request_reject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loan_reject"
                android:textColor="@color/colorPrimaryDark" />

            <RadioButton
                android:id="@+id/loan_request_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loan_confirm"
                android:textColor="@color/colorPrimaryDark" />

            <RadioButton
                android:id="@+id/loan_request_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loan_check"
                android:textColor="@color/colorPrimaryDark" />


        </RadioGroup>


    </LinearLayout>


</LinearLayout>